--- a/css/5_shopCart.css
+++ b/css/5_shopCart.css
@@ -1,20 +1,34 @@
 body {
     height: 100vh;
+    background-color: #168FA4;
 }
 
 body::before {
-    /* background-color: #168FA4; */
-
     content: "";
     display: block;
     width: 0;
     height: 0;
     border-style: solid;
-    border-color: #168FA4 #FFC024 black #FF4E42;
+    border-color: #168FA4 #FFC024 black transparent;
     position: absolute;
     pointer-events: none;
 
-    top: 0;
-    border-width: 100vh 50vw 10px 50vw;
+    bottom: 0;
+    border-width: 80vh 80vw 0 20vw;
+    margin-top: 1px;
+}
+
+body::after {
+    content: "";
+    display: block;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-color: #168FA4 transparent black #ED5B4C;
+    position: absolute;
+    pointer-events: none;
+
+    bottom: 0;
+    border-width: 80vh 20vw 0 80vw;
     margin-top: 1px;
 }
