--- a/css/0_index.css
+++ b/css/0_index.css
@@ -76,7 +76,7 @@
   
   .mainact-1 {
     overflow: hidden;
-    background-image: url(./img/landing/mainact_01.jpg);
+    background-image: url(../imgs/index/mainact_01.jpg);
     background-size: cover;
   }
   
@@ -85,7 +85,7 @@
   }
   
   .m-100 {
-    margin: 5rem;
+    margin: 5rem 0;
   }
   
   .w-85 {
@@ -119,7 +119,7 @@
   .pickup-1 {
     border: 3px solid black;
     border-radius: 0;
-    background: url(./img/landing/mainact_02.jpg) no-repeat;
+    background: url(../imgs/index/mainact_02.jpg) no-repeat;
     background-size: cover;
     background-position: right;
   }
@@ -127,7 +127,7 @@
   .pickup-2 {
     border: 3px solid black;
     border-radius: 0;
-    background: url(./img/landing/mainact_03.jpg) no-repeat;
+    background: url(../imgs/index/mainact_03.jpg) no-repeat;
     background-size: cover;
     background-position: right;
   }
@@ -135,7 +135,7 @@
   .pickup-3 {
     border: 3px solid black;
     border-radius: 0;
-    background: url(./img/landing/mainact_04.jpg) no-repeat;
+    background: url(../imgs/index/mainact_04.jpg) no-repeat;
     background-size: cover;
     background-position: right;
   }
