--- a/css/5_shopCart-quit.css
+++ b/css/5_shopCart-quit.css
@@ -12,22 +12,22 @@ body {
     background-color: #168FA4;
 }
 
-body::before {
+.wrap-bg::before {
     content: "";
     border-style: solid;
     border-color: transparent #FFC024 black transparent;
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     border-width: 80vh 80vw 0 20vw;
     z-index: 1;
 }
 
-body::after {
+.wrap-bg::after {
     content: "";
     border-style: solid;
     border-color: transparent transparent black #ED5B4C;
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     border-width: 80vh 20vw 0 80vw;
 }
 
@@ -36,7 +36,7 @@ body::after {
 .form-bg {
     background-color: white;
     border: 3px solid black;
-    height: 70vh;
+    height: 90vh;
     z-index: 3;
 }
 
