--- a/css/5_shopCart-list.css
+++ b/css/5_shopCart-list.css
@@ -1,3 +1,28 @@
+/* 商品欄位 */
+
+.shop-item-title {
+    border-bottom: 3px solid black;
+}
+
+
+.shopping-list .img-wrap {
+    height: 100px;
+}
+
+.info-wrap {
+    height: 100px;
+}
+
+.fa-plus,
+.fa-trash-alt {
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.item {
+    border-bottom: 3px solid black;
+}
+
 /* ====== Ｍedia Query =============== */
 /* Extra small 超小 (576px 以下) */
 @media screen and (max-width: 576px) {}
@@ -10,9 +35,28 @@
 /* 576-768之間的畫面 */
 @media (min-width: 576px) and (max-width:768px) {}
 
-/* ================================ */
+
+@media (max-width: 768px) {
+    .shop-item-title {
+        display: none;
+    }
+
+    .item li {
+        margin: 30px auto;
+    }
+
+}
+
+/* ============================= */
 /* Medium 中型裝置md (768px 以上) */
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+    .item ul {
+        display: flex;
+    }
+
+
+
+}
 
 
 /* 768-992之間的畫面 */
