--- a/css/0_index.css
+++ b/css/0_index.css
@@ -50,7 +50,7 @@ body {
 
 @media (min-width: 992px) {
   .marquee-roll{
-    padding-top: 16%;
+    padding-top: 20%;
   }
 
   .card{
@@ -131,7 +131,6 @@ body {
 .marquee-main-lg {
   font-family: "Roboto", sans-serif;
   font-weight: 800;
-  margin: 2rem 0;
   font-size: 12vw;
   overflow: hidden;
   color: #ffffff;
@@ -207,6 +206,10 @@ body {
   line-height: 40px;
 }
 
+.eyes{
+  height: 40px;
+}
+
 .arrow{
   animation: scroll 1.5s infinite;
   -webkit-animation: scroll 1.5s infinite;
@@ -216,11 +219,11 @@ body {
   0% {
     transform: translateY(-10px);
   }
-  30% {
-    transform: translateY(0px);
-  }
-  60% {
+  50% {
     transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
   }
 }
 
