--- a/css/3_B2B-index.css
+++ b/css/3_B2B-index.css
@@ -1,15 +1,21 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
-.b2bindex {
+.background {
+  width: 100%;
   height: 750px;
   background-color: #ffc024;
 }
-.row {
+
+.index {
+  display: flex;
   margin: 0 auto;
-  width: 80%;
   justify-content: space-between;
+}
+
+.ogzcard {
+  margin-top: 170px;
 }
 
 .indexcard {
@@ -17,14 +23,74 @@
   width: 260px;
   height: 500px;
   /* background-color: #168fa4; */
+  position: relative;
+}
+
+.titlecard {
+  position: absolute;
+  top: 15px;
+  right: 40px;
+}
+
+.bgcard {
+  margin-top: 50px;
+  width: 260px;
+  height: 375px;
+  background-color: #168fa4;
+  border: 3px solid #000;
+}
+
+.notebook {
+  margin-top: 60px;
+  margin-left: 50px;
+}
+
+.eventsvg {
+  margin-top: 80px;
+  margin-left: 40px;
+}
+
+.ticketsvg {
+  margin-top: 58px;
+  margin-left: 30px;
+}
+
+.cardtext {
+  color: #fff;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.eventcardtext {
+  color: #fff;
+  text-align: center;
+  margin-top: 60px;
+}
+
+.modbutton {
+  width: 100%;
+}
+
+.modify {
+  margin-top: 30px;
+  width: 97px;
+  height: 48px;
+  background-color: #ffc024;
+  border: 3px solid #000;
 }
 
 .picture {
-  margin: 100px auto 0;
+  margin: 110px auto 0;
   width: 230px;
   height: 230px;
   border-radius: 50%;
+  background-color: #f1f9ff;
   border: 3px solid #000;
+}
+
+.people {
+  margin-top: 40px;
+  margin-left: 40px;
 }
 
 .organizer {
@@ -32,4 +98,11 @@
   text-align: center;
   font-size: 24px;
   font-weight: 700;
+}
+
+.slogan p {
+  margin-top: 5px;
+  margin-left: 48%;
+  font-weight: 700;
+  font-size: 34px;
 }
