--- a/css/0_index.css
+++ b/css/0_index.css
@@ -32,7 +32,7 @@ body {
     font-size: 20px;
   }
 
-  .marquee-roll{
+  .marquee-roll {
     padding-top: 40%;
   }
 
@@ -41,7 +41,7 @@ body {
     font-weight: 600;
     margin-bottom: 2rem;
   }
-  
+
   .sub-slogan {
     font-size: 0.9rem;
     margin-bottom: 0.5rem;
@@ -49,11 +49,11 @@ body {
 }
 
 @media (min-width: 992px) {
-  .marquee-roll{
+  .marquee-roll {
     padding-top: 20%;
   }
 
-  .card{
+  .card {
     margin-bottom: 3rem;
   }
 
@@ -62,12 +62,11 @@ body {
     font-weight: 600;
     margin-bottom: 2rem;
   }
-  
+
   .sub-slogan {
     font-size: 1.4rem;
     margin-bottom: 0.5rem;
   }
-  
 }
 
 @media (min-width: 1200px) {
@@ -76,12 +75,11 @@ body {
     font-weight: 600;
     margin-bottom: 2rem;
   }
-  
+
   .sub-slogan {
     font-size: 1.9rem;
     margin-bottom: 0.5rem;
   }
-  
 }
 
 @media (max-width: 768px) {
@@ -89,15 +87,15 @@ body {
     font-size: 12px;
   }
 
-  .marquee-roll{
+  .marquee-roll {
     padding-top: 60%;
   }
 
-  .card{
+  .card {
     margin-bottom: 2rem;
   }
 
-  .ticket-punches{
+  .ticket-punches {
     display: none;
   }
 
@@ -105,7 +103,7 @@ body {
     padding-top: 50%;
   }
 
-  .bubble{
+  .bubble {
     width: 50%;
   }
 
@@ -114,7 +112,7 @@ body {
     font-weight: 600;
     margin-bottom: 2rem;
   }
-  
+
   .sub-slogan {
     font-size: 0.9rem;
     margin-bottom: 0.5rem;
@@ -148,69 +146,69 @@ body {
   transform: rotate(-7deg);
 }
 
-.brand{
+.brand {
   margin-right: 5rem;
 }
 
-.slogan{
+.slogan {
   margin-right: 5rem;
 }
 
-.the-wall{
+.the-wall {
   width: 250px;
   top: 8%;
   left: 8%;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
 }
 
-.the-wall:hover{
+.the-wall:hover {
   transform: rotate(-45deg);
 }
 
-.god{
+.god {
   width: 250px;
   top: 8%;
   right: 20%;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
   transform: rotate(-15deg);
 }
 
-.god:hover{
+.god:hover {
   transform: rotate(45deg);
 }
 
-.taipei{
+.taipei {
   width: 300px;
   bottom: 5%;
   right: 3%;
-  transition-duration: .5s;
+  transition-duration: 0.5s;
 }
 
-.taipei:hover{
+.taipei:hover {
   transform: rotate(60deg);
 }
 
-.space{
+.space {
   height: 12%;
 }
 
-.scroll-down{
+.scroll-down {
   margin: auto;
   padding: 30px;
-  background-color: #FFC024;
+  background-color: #ffc024;
 }
 
-.scroll-down span{
+.scroll-down span {
   font-size: 1.5rem;
   font-weight: bold;
   line-height: 40px;
 }
 
-.eyes{
+.eyes {
   height: 40px;
 }
 
-.arrow{
+.arrow {
   animation: scroll 1.5s infinite;
   -webkit-animation: scroll 1.5s infinite;
 }
@@ -360,15 +358,15 @@ body {
   background: url(../imgs/index/ic-tape.svg) center no-repeat;
 }
 
-a:hover{
+a:hover {
   text-decoration: none;
 }
 
-.see-more:hover{
+.see-more:hover {
   color: #000;
 }
 
-.rubberBand{
+.rubberBand {
   margin: 0 0.5rem;
   animation: rubberBand;
   animation-duration: 0.8s;
@@ -426,8 +424,20 @@ a:hover{
   background-size: 0.75rem 0.75rem;
 }
 
-.blog .section-title{
+.blog .section-title {
   font-size: 8rem;
   font-weight: 800;
 }
 
+.layout {
+  padding-top: 100%;
+  background: url(../imgs/index/blog-01.jpg) center no-repeat;
+}
+
+.blog .inner-box {
+  border: 2px solid #000;
+}
+
+hr {
+  border-top: 1px solid rgba(0, 0, 0);
+}
