--- a/css/1_member-signup.css
+++ b/css/1_member-signup.css
@@ -8,23 +8,22 @@ body {
 }
 
 .signup-list {
-  margin-top: 250px;
+  margin-top: 230px;
   background: #fff;
   background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
     linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
   background-size: 0.75rem 0.75rem;
   margin-bottom: 200px;
-}
-
-.deco {
   position: relative;
 }
 
 .long-clip {
   position: absolute;
-  width: 150px;
-  height: 150px;
-  top: -20px;
+  width: 190px;
+  height: 190px;
+  top: -110px;
+  left: -20px;
+  transform: rotate(33deg);
 }
 
 .tape img {
@@ -32,12 +31,13 @@ body {
   height: 200px;
   position: absolute;
   transform: rotate(15deg);
-  top: -90px;
-  right: -10px;
+  top: -80px;
+  right: -15px;
 }
 
 .list-title {
   font-size: 24px;
+  font-weight: 600;
   text-align: center;
   font-family: NotoSansTC-Regular, Roboto;
   letter-spacing: 2px;
@@ -76,7 +76,8 @@ label {
   text-align: center;
   margin: 40px 0 30px;
   font-family: NotoSansTC-Regular, Roboto;
-  font-size: 24px;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .eyes {
