--- a/css/0_index.css
+++ b/css/0_index.css
@@ -425,19 +425,56 @@ a:hover {
 }
 
 .blog .section-title {
+  margin-top: 10%;
   font-size: 8rem;
   font-weight: 800;
 }
 
-.layout {
-  padding-top: 100%;
+.post-tape {
+  top: -10%;
+  left: calc(50% - 119px);
+}
+
+.article-img {
+  margin-top: 10%;
+  height: 380px;
   background: url(../imgs/index/blog-01.jpg) center no-repeat;
+  display: flex;
+  align-items: center;
 }
 
 .blog .inner-box {
-  border: 2px solid #000;
+  margin: auto;
+  width: 80%;
+  height: 80%;
+  border: 2px solid rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
 }
 
-hr {
-  border-top: 1px solid rgba(0, 0, 0);
+.line {
+  border-top: 2px solid rgb(255, 255, 255);
+}
+
+.article-title {
+  color: #fff;
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 1rem;
+  font-weight: bold;
+  letter-spacing: 2.55px;
+  flex: 1;
+  margin: 5%;
+}
+
+.article-subtitle {
+  color: #fff;
+  font-family: "Noto Sans TC", sans-serif;
+  font-size: 0.7rem;
+  letter-spacing: 2.55px;
+  flex: 3;
+  margin: 5%;
+}
+
+.graffiti {
+  background: url(../imgs/index/blog-deco-01.png) no-repeat;
 }
