--- a/css/3_B2B-member-profile.css
+++ b/css/3_B2B-member-profile.css
@@ -1,10 +1,10 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
 .background {
   width: 100%;
-  height: 1100px;
+  height: 1150px;
   background-color: #ffc024;
 }
 .mamberbg {
@@ -19,7 +19,13 @@
   background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
     linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
   background-size: 0.75rem 0.75rem;
-  margin-bottom: 200px;
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.clip {
+  position: absolute;
+  left: 20px;
 }
 
 .picture {
@@ -58,4 +64,68 @@
 .introduction-text p {
   font-size: 16px;
   font-weight: 100;
+}
+
+.time {
+  height: 25px;
+  margin: 0 auto;
+  justify-content: flex-end;
+}
+
+.date {
+  margin-left: 20px;
+  color: #ababab;
+}
+
+.history {
+  margin: 60px auto 0;
+  width: 380px;
+  height: 90px;
+  padding: 0;
+}
+
+.always {
+  text-align: center;
+  width: 100%;
+  height: 35px;
+  border-bottom: 1px solid #000;
+}
+
+.type {
+  width: 60%;
+  margin: 20px auto;
+  justify-content: space-between;
+}
+
+.contact {
+  width: 100%;
+  height: 50px;
+  margin: 40px auto 0;
+  justify-content: space-around;
+}
+
+.phone {
+  align-items: center;
+}
+
+.e-mail {
+  align-items: center;
+}
+
+.number {
+  margin-left: 10px;
+  height: 20px;
+}
+
+.modbutton {
+  width: 100%;
+}
+
+.modify {
+  width: 190px;
+  height: 50px;
+  background-color: #168fa4;
+  border: 3px solid #000;
+  border-radius: 0;
+  margin-top: 20px;
 }
