--- a/css/5_shopCart-bg.css
+++ b/css/5_shopCart-bg.css
@@ -40,7 +40,7 @@ button:focus {
 .form-bg {
     background-color: white;
     border: 3px solid black;
-    height: 90vh;
+    /* height: 90vh; */
     z-index: 3;
 }
 
