--- a/css/5_shopCart-member-info.css
+++ b/css/5_shopCart-member-info.css
@@ -1,3 +1,35 @@
+.form-title {
+    border-bottom: 3px solid black;
+}
+
+
+
+
+
+.form-control {
+    font-family: NotoSansTC-Regular, Roboto;
+    font-size: .8rem;
+    height: 50px;
+    border-radius: 0;
+    border: 3px solid #000;
+
+}
+
+
+
+form .btn {
+    color: #000;
+    margin: auto 0;
+    border: 3px solid #000;
+    border-radius: 0px;
+    font-weight: 600;
+}
+
+.previous-step {
+    background-color: #ffc639;
+}
+
+
 
 /* ====== Ｍedia Query =============== */
 /* Extra small 超小 (576px 以下) */
