--- a/css/3_B2B-Create-Event.css
+++ b/css/3_B2B-Create-Event.css
@@ -75,6 +75,10 @@ span {
   overflow: auto;
 }
 
+.pricesetting {
+  justify-content: flex-end;
+}
+
 .pricetag {
   height: 50px;
   margin: 23px 0 0;
@@ -82,10 +86,4 @@ span {
   background-color: white;
   font-size: 1.5em;
   font-weight: bold;
-}
-
-.price {
-  height: 50px;
-  border: black 3px solid;
-  margin: -2px;
 }
