--- a/css/3_B2B-ticket-list.css
+++ b/css/3_B2B-ticket-list.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   outline: 1px solid red;
-}
+} */
 
 .background {
   width: 100%;
@@ -51,6 +51,84 @@
   height: 50px;
   background-color: rgba(255, 255, 255, 0);
   color: #000;
+  border: 3px solid #000;
+  border-radius: 0;
+}
+
+.header-search {
+  margin: 10px auto 0;
+  padding: 0;
+  position: relative;
+}
+
+.search {
+  width: 100%;
+}
+
+.search:focus {
+  border: 3px solid #168fa4;
+  background-color: #168fa4;
+}
+
+.search-icon {
+  top: 5px;
+  right: 8px;
+  position: absolute;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+table {
+  margin-top: 60px;
+  width: 100%;
+  height: 750px;
+}
+
+.tr {
+  width: 100%;
+  justify-content: space-around;
+  height: 7rem;
+  border-bottom: 1px solid #000;
+  font-weight: 700;
+  align-items: center;
+}
+
+.white {
+  width: 75px;
+}
+
+.tr2 {
+  /* margin-top: 20px; */
+  justify-content: space-around;
+  height: 7rem;
+  border-bottom: 1px solid #000;
+  align-items: center;
+}
+
+.modify3 {
+  width: 100px;
+  height: 50px;
+  margin-left: 10px;
+  background-color: #168fa4;
+  border: 3px solid #000;
+  border-radius: 0;
+}
+
+.modify3 {
+  width: 100px;
+  height: 50px;
+  margin-left: 10px;
+  background-color: #168fa4;
+  border: 3px solid #000;
+  border-radius: 0;
+}
+
+.modify4 {
+  width: 100px;
+  height: 50px;
+  margin-left: 10px;
+  background-color: #ed5b4c;
   border: 3px solid #000;
   border-radius: 0;
 }
