--- a/css/1_member-signup.css
+++ b/css/1_member-signup.css
@@ -8,117 +8,119 @@ body {
 }
 
 .signup-list {
-  margin-top: 230px;
+  margin-top: 16rem;
   background: #fff;
   background-image: linear-gradient(rgba(22, 143, 164, 0.15) 1px, transparent 0),
     linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
   background-size: 0.75rem 0.75rem;
-  margin-bottom: 200px;
+  margin-bottom: 10rem;
   position: relative;
 }
 
 .long-clip {
   position: absolute;
-  width: 190px;
-  height: 190px;
-  top: -110px;
-  left: -20px;
+  width: 12rem;
+  top: -7rem;
+  left: -1rem;
   transform: rotate(33deg);
 }
 
 .tape img {
-  width: 350px;
-  height: 200px;
+  width: 24rem;
   position: absolute;
   transform: rotate(15deg);
-  top: -80px;
-  right: -15px;
+  top: -4rem;
+  right: -1.2rem;
 }
 
 .list-title {
-  font-size: 24px;
+  font-size: 1.5rem;
   font-weight: 600;
   text-align: center;
   font-family: NotoSansTC-Regular, Roboto;
   letter-spacing: 2px;
-  line-height: 35px;
-  margin-top: 100px;
+  line-height: 1.8rem;
+  margin-top: 7rem;
 }
 
 .signup-form {
   margin-top: 40px;
-  padding: 20px 120px;
 }
 
 .r-pin {
-  width: 40px;
-  height: 40px;
+  width: 2rem;
+  /* height: 40px; */
   transform: rotate(310deg);
   margin-right: 8px;
 }
 
 label {
-  font-size: 16px;
+  font-size: 1rem;
   font-family: NotoSansTC-Regular;
-  padding: 8px;
-  margin-left: 48px;
+  padding: 0.6rem;
+  margin-left: 3rem;
 }
 
 .form-control {
-  height: 50px;
+  height: 3.125rem;
   border-radius: 0;
   border: 3px solid #000;
   font-family: NotoSansTC-Regular, Roboto;
-  font-size: 14px;
+  font-size: 0.875rem;
 }
 
 .terms-title {
   text-align: center;
-  margin: 40px 0 30px;
+  margin: 2rem 0 1.875rem;
   font-family: NotoSansTC-Regular, Roboto;
-  font-size: 20px;
+  font-size: 1.5rem;
   font-weight: 600;
 }
 
 .eyes {
-  width: 45px;
-  height: 45px;
-  margin-left: 10px;
+  width: 2.2rem;
+  /* height: 45px; */
+  margin-left: 0.625rem;
 }
 
 .terms {
   background-color: #fff;
   border: 3px solid #000;
-  width: 710px;
-  height: 300px;
+  width: 100%;
+  height: 15rem;
   overflow: auto;
   font-family: NotoSansTC-Regular, Roboto;
 }
 
 .service-text {
-  padding-bottom: 30px;
-  margin-bottom: 30px;
+  padding-bottom: 1.875rem;
+  margin-bottom: 1.875rem;
   border-bottom: 1px solid #ccc;
   line-height: 23px;
-  font-size: 14px;
+  font-size: 0.875rem;
+  margin: 0 15px;
 }
 
 .privacy-text {
   line-height: 23px;
-  margin-bottom: 30px;
-  font-size: 14px;
+  margin-bottom: 1.875rem;
+  font-size: 0.875rem;
+  margin: 12px 15px;
 }
 
 .form-check-label {
   font-family: NotoSansTC-Regular, Roboto;
-  font-size: 16px;
+  font-size: 1rem;
   margin-left: 0px;
 }
 
 .form-check-input {
-  width: 15px;
-  height: 15px;
-  border-radius: 0px;
+  width: 0.9375rem;
+  height: 0.9375rem;
+}
+
+.signup-btn {
+  height: 50px;
 }
 
 .btn {
@@ -128,18 +130,87 @@ label {
   border: 3px solid #000;
   border-radius: 0px;
   font-weight: 600;
+  height: 50px;
 }
 
 .line {
   border-top: 3px solid #aaa;
-  margin-top: 40px;
-  padding-top: 20px;
+  margin-top: 2rem;
+  padding-top: 1rem;
 }
 
 /* Media Query */
 /* ============================= */
 /* Extra small 超小 (576px 以下) */
+
 @media screen and (max-width: 576px) {
+  html {
+    font-size: 20px;
+  }
+
+  body {
+    background: #fff;
+    background-image: linear-gradient(
+        rgba(22, 143, 164, 0.15) 1px,
+        transparent 0
+      ),
+      linear-gradient(90deg, rgba(22, 143, 164, 0.15) 1px, transparent 0);
+    background-size: 0.75rem 0.75rem;
+  }
+
+  .signup-list {
+    margin-top: 10rem;
+  }
+
+  .long-clip {
+    display: none;
+  }
+
+  .tape img {
+    position: static;
+    width: 15rem;
+    transform: rotate(7deg);
+    margin-left: 2.7rem;
+  }
+
+  .list-title {
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 2px;
+    line-height: 1.8rem;
+    margin: 2.5rem 1rem 0;
+  }
+
+  .r-pin {
+    width: 1rem;
+  }
+
+  label {
+    margin-left: 2rem;
+  }
+
+  .terms-title {
+    margin: 2rem 0.5rem 1.875rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .form-check-label {
+    font-size: 0.8125rem;
+    margin-left: 0px;
+  }
+
+  .form-check-input {
+    width: 0.75rem;
+    height: 0.75rem;
+  }
+
+  .confirm {
+    font-size: 0.8125rem;
+  }
+  .login-btn {
+    font-size: 0.8125rem;
+  }
 }
 
 /* =============================== */
