--- a/css/0_index.css
+++ b/css/0_index.css
@@ -505,13 +505,22 @@ a:hover {
 .b2b {
   background-color: #ffc024;
   border: 3px solid #000;
+  overflow: hidden;
 }
 
 .purple-marquee {
-  color: #002c80;
-  font-size: 5vw;
-  font-weight: 800;
-  /* transform: rotate(270deg); */
+  height: 100%;
+  background: url(../imgs/index/b2b-scrollText.svg) no-repeat;
+  animation: marquee 20s linear infinite;
+}
+
+@keyframes marquee{
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-150%);
+  }
 }
 
 .content {
