加上product list 篩選跟推薦區小卡

--- a/css/5_shopCart-bg.css
+++ b/css/5_shopCart-bg.css
@@ -16,6 +16,10 @@ button:focus {
     outline: 3px solid #FFC024;
 }
 
+.wrap-bg {
+    height: 100vh;
+}
+
 .wrap-bg::before {
     content: "";
     border-style: solid;
