--- a/css/4_productList.css
+++ b/css/4_productList.css
@@ -40,28 +40,43 @@ button:focus {
 }
 
 /* 大圖輪播區塊 */
-.pic {
+/* .pic {
     height: 800px;
     background-color: #EEE;
+} */
+
+.carousel {
+    height: 700px;
+    overflow: hidden;
+}
+
+.carousel img {
+    object-fit: cover;
 }
 
 /* 篩選區塊 */
 .filter {
-    position: absolute;
-    top: -40px;
-    height: 350px;
+    /* position: absolute; */
+    /* top: -40px; */
+    height: 100px;
     background-color: #fff;
 }
 
-.f2 {
-    right: 0;
+textarea:focus,
+input:focus {
+    color: black !important;
 }
 
+.choose {
+    height: 300px;
+    background-color: #fff;
+}
 
 /* 本週主打精選 */
 
 .week {
-    height: 800px;
+    height: 300px;
+
 }
 
 /* 商品列表 */
@@ -156,6 +171,10 @@ iframe {
 /* 推薦商品 */
 .card-sm .img-wrap {
     height: 200px;
+}
+
+.card-sm .time {
+    height: 60px;
 }
 
 
