--- a/css/5_shopCart-list.css
+++ b/css/5_shopCart-list.css
@@ -11,7 +11,15 @@
 
 .info-wrap {
     height: 100px;
+    overflow: hidden;
 }
+
+.event-title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+
 
 .minus,
 .fa-plus,
