--- a/css/1_member-signup.css
+++ b/css/1_member-signup.css
@@ -2,6 +2,10 @@
   outline: 1px solid red;
 } */
 
+html {
+  font-size: 20px;
+}
+
 body {
   height: 100vh;
   background-color: #002c80;
@@ -145,7 +149,7 @@ label {
 
 @media screen and (max-width: 576px) {
   html {
-    font-size: 20px;
+    font-size: 16px;
   }
 
   body {
@@ -174,7 +178,7 @@ label {
   }
 
   .list-title {
-    font-size: 1rem;
+    font-size: 0.5rem;
     font-weight: 600;
     letter-spacing: 2px;
     line-height: 1.8rem;
