--- a/css/2_member-order.css
+++ b/css/2_member-order.css
@@ -86,3 +86,31 @@ body {
 .qr-code img{
     top: calc(50% - 40%);
 }
+
+/* ----------pagination---------- */
+
+.page-link {
+    background-color: transparent;
+    color: #fff;
+    border: none;
+}
+
+.page-link:hover {
+    background-color: #fff;
+    border: 3px solid black;
+
+}
+
+.page-item.active .page-link {
+    background-color: #FFC024;
+    color: #000;
+    border: 3px solid black;
+}
+
+.page-item.disabled .page-link {
+    background-color: transparent;
+}
+
+.page-link:focus {
+    box-shadow: none;
+}
