--- a/css/5_shopCart-pay.css
+++ b/css/5_shopCart-pay.css
@@ -28,6 +28,17 @@
     height: 300px;
 }
 
+/* .confirm {
+    display: none;
+    width: 100%;
+    height: 100%;
+    z-index: 51;
+    top: 0;
+    left: 0;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+} */
+
 /* ====== Ｍedia Query =============== */
 /* Extra small 超小 (576px 以下) */
 @media screen and (max-width: 576px) {}
